crates/solite-lexer/src/snapshots/solite_lexer__json__tests__json_test_0.snap
---
source: crates/solite-lexer/src/json.rs
expression: result
snapshot_kind: text
---
[
    (
        "{",
        Token {
            kind: LBrace,
            start: 0,
            end: 1,
            string_context: None,
            text: "{",
        },
    ),
    (
        "\"name\"",
        Token {
            kind: String,
            start: 1,
            end: 7,
            string_context: Some(
                Key,
            ),
            text: "\"name\"",
        },
    ),
    (
        ":",
        Token {
            kind: Colon,
            start: 7,
            end: 8,
            string_context: Some(
                Value,
            ),
            text: ":",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 8,
            end: 9,
            string_context: Some(
                Value,
            ),
            text: " ",
        },
    ),
    (
        "\"John\"",
        Token {
            kind: String,
            start: 9,
            end: 15,
            string_context: Some(
                Value,
            ),
            text: "\"John\"",
        },
    ),
    (
        ",",
        Token {
            kind: Comma,
            start: 15,
            end: 16,
            string_context: Some(
                Value,
            ),
            text: ",",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 16,
            end: 17,
            string_context: Some(
                Key,
            ),
            text: " ",
        },
    ),
    (
        "\"age\"",
        Token {
            kind: String,
            start: 17,
            end: 22,
            string_context: Some(
                Key,
            ),
            text: "\"age\"",
        },
    ),
    (
        ":",
        Token {
            kind: Colon,
            start: 22,
            end: 23,
            string_context: Some(
                Value,
            ),
            text: ":",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 23,
            end: 24,
            string_context: Some(
                Value,
            ),
            text: " ",
        },
    ),
    (
        "30",
        Token {
            kind: Number,
            start: 24,
            end: 26,
            string_context: Some(
                Value,
            ),
            text: "30",
        },
    ),
    (
        "}",
        Token {
            kind: RBrace,
            start: 26,
            end: 27,
            string_context: Some(
                Value,
            ),
            text: "}",
        },
    ),
    (
        "",
        Token {
            kind: Eof,
            start: 27,
            end: 27,
            string_context: None,
            text: "",
        },
    ),
]
