crates/solite-lexer/src/snapshots/solite_lexer__json__tests__json_test_3.snap
---
source: crates/solite-lexer/src/json.rs
expression: result
snapshot_kind: text
---
[
    (
        "{",
        Token {
            kind: LBrace,
            start: 0,
            end: 1,
            string_context: None,
            text: "{",
        },
    ),
    (
        "\"number\"",
        Token {
            kind: String,
            start: 1,
            end: 9,
            string_context: Some(
                Key,
            ),
            text: "\"number\"",
        },
    ),
    (
        ":",
        Token {
            kind: Colon,
            start: 9,
            end: 10,
            string_context: Some(
                Value,
            ),
            text: ":",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 10,
            end: 11,
            string_context: Some(
                Value,
            ),
            text: " ",
        },
    ),
    (
        "123",
        Token {
            kind: Number,
            start: 11,
            end: 14,
            string_context: Some(
                Value,
            ),
            text: "123",
        },
    ),
    (
        ",",
        Token {
            kind: Comma,
            start: 14,
            end: 15,
            string_context: Some(
                Value,
            ),
            text: ",",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 15,
            end: 16,
            string_context: Some(
                Key,
            ),
            text: " ",
        },
    ),
    (
        "\"float\"",
        Token {
            kind: String,
            start: 16,
            end: 23,
            string_context: Some(
                Key,
            ),
            text: "\"float\"",
        },
    ),
    (
        ":",
        Token {
            kind: Colon,
            start: 23,
            end: 24,
            string_context: Some(
                Value,
            ),
            text: ":",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 24,
            end: 25,
            string_context: Some(
                Value,
            ),
            text: " ",
        },
    ),
    (
        "-45.67",
        Token {
            kind: Number,
            start: 25,
            end: 31,
            string_context: Some(
                Value,
            ),
            text: "-45.67",
        },
    ),
    (
        ",",
        Token {
            kind: Comma,
            start: 31,
            end: 32,
            string_context: Some(
                Value,
            ),
            text: ",",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 32,
            end: 33,
            string_context: Some(
                Key,
            ),
            text: " ",
        },
    ),
    (
        "\"exp\"",
        Token {
            kind: String,
            start: 33,
            end: 38,
            string_context: Some(
                Key,
            ),
            text: "\"exp\"",
        },
    ),
    (
        ":",
        Token {
            kind: Colon,
            start: 38,
            end: 39,
            string_context: Some(
                Value,
            ),
            text: ":",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 39,
            end: 40,
            string_context: Some(
                Value,
            ),
            text: " ",
        },
    ),
    (
        "1.2e-10",
        Token {
            kind: Number,
            start: 40,
            end: 47,
            string_context: Some(
                Value,
            ),
            text: "1.2e-10",
        },
    ),
    (
        "}",
        Token {
            kind: RBrace,
            start: 47,
            end: 48,
            string_context: Some(
                Value,
            ),
            text: "}",
        },
    ),
    (
        "",
        Token {
            kind: Eof,
            start: 48,
            end: 48,
            string_context: None,
            text: "",
        },
    ),
]
