crates/solite-lexer/src/snapshots/solite_lexer__json__tests__json_test_4.snap
---
source: crates/solite-lexer/src/json.rs
expression: result
snapshot_kind: text
---
[
    (
        "{",
        Token {
            kind: LBrace,
            start: 0,
            end: 1,
            string_context: None,
            text: "{",
        },
    ),
    (
        "\n    ",
        Token {
            kind: Whitespace,
            start: 1,
            end: 6,
            string_context: Some(
                Key,
            ),
            text: "\n    ",
        },
    ),
    (
        "\"nested\"",
        Token {
            kind: String,
            start: 6,
            end: 14,
            string_context: Some(
                Key,
            ),
            text: "\"nested\"",
        },
    ),
    (
        ":",
        Token {
            kind: Colon,
            start: 14,
            end: 15,
            string_context: Some(
                Value,
            ),
            text: ":",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 15,
            end: 16,
            string_context: Some(
                Value,
            ),
            text: " ",
        },
    ),
    (
        "{",
        Token {
            kind: LBrace,
            start: 16,
            end: 17,
            string_context: Some(
                Value,
            ),
            text: "{",
        },
    ),
    (
        "\n        ",
        Token {
            kind: Whitespace,
            start: 17,
            end: 26,
            string_context: Some(
                Key,
            ),
            text: "\n        ",
        },
    ),
    (
        "\"array\"",
        Token {
            kind: String,
            start: 26,
            end: 33,
            string_context: Some(
                Key,
            ),
            text: "\"array\"",
        },
    ),
    (
        ":",
        Token {
            kind: Colon,
            start: 33,
            end: 34,
            string_context: Some(
                Value,
            ),
            text: ":",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 34,
            end: 35,
            string_context: Some(
                Value,
            ),
            text: " ",
        },
    ),
    (
        "[",
        Token {
            kind: LBracket,
            start: 35,
            end: 36,
            string_context: Some(
                Value,
            ),
            text: "[",
        },
    ),
    (
        "1",
        Token {
            kind: Number,
            start: 36,
            end: 37,
            string_context: Some(
                Value,
            ),
            text: "1",
        },
    ),
    (
        ",",
        Token {
            kind: Comma,
            start: 37,
            end: 38,
            string_context: Some(
                Value,
            ),
            text: ",",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 38,
            end: 39,
            string_context: Some(
                Value,
            ),
            text: " ",
        },
    ),
    (
        "2",
        Token {
            kind: Number,
            start: 39,
            end: 40,
            string_context: Some(
                Value,
            ),
            text: "2",
        },
    ),
    (
        ",",
        Token {
            kind: Comma,
            start: 40,
            end: 41,
            string_context: Some(
                Value,
            ),
            text: ",",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 41,
            end: 42,
            string_context: Some(
                Value,
            ),
            text: " ",
        },
    ),
    (
        "3",
        Token {
            kind: Number,
            start: 42,
            end: 43,
            string_context: Some(
                Value,
            ),
            text: "3",
        },
    ),
    (
        "]",
        Token {
            kind: RBracket,
            start: 43,
            end: 44,
            string_context: Some(
                Value,
            ),
            text: "]",
        },
    ),
    (
        ",",
        Token {
            kind: Comma,
            start: 44,
            end: 45,
            string_context: Some(
                Key,
            ),
            text: ",",
        },
    ),
    (
        "\n        ",
        Token {
            kind: Whitespace,
            start: 45,
            end: 54,
            string_context: Some(
                Key,
            ),
            text: "\n        ",
        },
    ),
    (
        "\"bool\"",
        Token {
            kind: String,
            start: 54,
            end: 60,
            string_context: Some(
                Key,
            ),
            text: "\"bool\"",
        },
    ),
    (
        ":",
        Token {
            kind: Colon,
            start: 60,
            end: 61,
            string_context: Some(
                Value,
            ),
            text: ":",
        },
    ),
    (
        " ",
        Token {
            kind: Whitespace,
            start: 61,
            end: 62,
            string_context: Some(
                Value,
            ),
            text: " ",
        },
    ),
    (
        "true",
        Token {
            kind: True,
            start: 62,
            end: 66,
            string_context: Some(
                Value,
            ),
            text: "true",
        },
    ),
    (
        "\n    ",
        Token {
            kind: Whitespace,
            start: 66,
            end: 71,
            string_context: Some(
                Value,
            ),
            text: "\n    ",
        },
    ),
    (
        "}",
        Token {
            kind: RBrace,
            start: 71,
            end: 72,
            string_context: Some(
                Value,
            ),
            text: "}",
        },
    ),
    (
        "\n",
        Token {
            kind: Whitespace,
            start: 72,
            end: 73,
            string_context: Some(
                Key,
            ),
            text: "\n",
        },
    ),
    (
        "}",
        Token {
            kind: RBrace,
            start: 73,
            end: 74,
            string_context: Some(
                Key,
            ),
            text: "}",
        },
    ),
    (
        "",
        Token {
            kind: Eof,
            start: 74,
            end: 74,
            string_context: None,
            text: "",
        },
    ),
]
